Fix container spacing

--- a/petite.css
+++ b/petite.css
@@ -109,7 +109,7 @@ input[type="button"]:hover { background: #f2f2f2; }
   .nine.col      { width: 74.0%;          }
   .ten.col       { width: 82.6666666667%; }
   .eleven.col    { width: 91.3333333333%; }
-  .twelve.col    { width: 100%; margin-left: 0; }
+  .twelve.col    { width: 100%; margin-left: 0; } }
 
 
 
@@ -154,9 +154,10 @@ h6 { font-size: 1.5rem; line-height: 1.6;  letter-spacing: 0; }
 
 /* -------------------------------------------------------------------------- */
 .container {
-  width: 100%-20px;
+  width: 100%-15px;
   max-width: 960px;
-  padding: 20px;
+  margin-left: 15px;
+  margin-right: 15px;
 }
 
 
